--- a/_config.yml
+++ b/_config.yml
@@ -98,7 +98,7 @@ social:
 # Creative Commons 4.0 International License.
 # http://creativecommons.org/
 # Available: by | by-nc | by-nc-nd | by-nc-sa | by-nd | by-sa | zero
-creative_commons: by-nc-sa
+creative_commons: by-nd
 
 
 # Google 站长工具验证，请选择 `HTML Meta` 验证方式
@@ -114,7 +114,7 @@ google_analytics:
 baidu_analytics: 50c15455e37f70aea674ff4a663eef27
 
 # 站点起始时间
-since: 2012
+since: 2014
 
 # =============================================================================
 # End NexT Theme configuration
