--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ timezone:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://yoursite.com
+url: http://alibobo.me
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
@@ -79,19 +79,19 @@ deploy:
 # =============================================================================
 
 # 多说帐号
-duoshuo_shortname: your-duoshuo-shortname
+#duoshuo_shortname: your-duoshuo-shortname
 
 # DISQUS 帐号 （如果已经设置 多说 帐号，此选项将被跳过）
-disqus_shortname: your-disqus-shortname
+#disqus_shortname: your-disqus-shortname
 
 
 # 社交链接，将在侧栏中显示
 social:
-  GitHub: your-github-url
-  Twitter: your-twitter-url
-  Weibo: your-weibo-url
-  DouBan: your-douban-url
-  ZhiHu: your-zhihu-url
+ # GitHub: your-github-url
+ # Twitter: your-twitter-url
+  Weibo: http://weibo.com/u/3183902214
+ # DouBan: your-douban-url
+ # ZhiHu: your-zhihu-url
   # 等等
 
 
@@ -103,15 +103,15 @@ creative_commons: by-nd
 
 # Google 站长工具验证，请选择 `HTML Meta` 验证方式
 # See: https://www.google.com/webmasters/
-google_site_verification: VvyjvVXcJQa0QklHipu6pwm2PJGnnchIqX7s5JbbT_0
+#google_site_verification: VvyjvVXcJQa0QklHipu6pwm2PJGnnchIqX7s5JbbT_0
 
 
 # Google 分析 ID
-google_analytics:
+#google_analytics:
 
 
 # 百度统计 ID，此 ID 是百度统计提供脚本中 hm.js? 后面那串字符，非百度统计帐号
-baidu_analytics: 50c15455e37f70aea674ff4a663eef27
+#baidu_analytics: 50c15455e37f70aea674ff4a663eef27
 
 # 站点起始时间
 since: 2014
